--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 		<title>Shiham-portfolio</title>
 		<link rel="icon" href="assets/img/279105393_3201597220099002_4487681873371122246_n.png">
 		<link rel="stylesheet" href="assets/css/style.css">
+		<link rel="stylesheet" href="assets/StartUp/css/bootstrap.min.css">
 	</head>
 	<body>
-		<h1>this is another purpose of practice</h1>
-		<h2>this is second purpose of practice</h2>
+		<h1 class="bg-dark text-white">this is another purpose of practice</h1>
+		<h2 class="bg-primary text-white-50">this is second purpose of practice</h2>
+		<script src="assets/StartUp/js/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
