--- a/index.html
+++ b/index.html
@@ -1,16 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Shiham-portfolio</title>
-		<link rel="icon" href="assets/img/279105393_3201597220099002_4487681873371122246_n.png">
-		<link rel="stylesheet" href="assets/css/style.css">
-		<link rel="stylesheet" href="assets/StartUp/css/bootstrap.min.css">
-	</head>
-	<body>
-		<h1 class="bg-dark text-white">this is another purpose of practice</h1>
-		<h2 class="bg-primary text-white-50">this is second purpose of practice</h2>
-		<script src="assets/StartUp/js/bootstrap.bundle.min.js"></script>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Shiham-portfolio</title>
+    <link
+      rel="icon"
+      href="assets/img/279105393_3201597220099002_4487681873371122246_n.png"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- <link rel="stylesheet" href="assets/StartUp/css/bootstrap.min.css" /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body class="main-content">
+    <header class="section sec1 header active" id="header"></header>
+
+    <main>
+      <section class="section sec2 about" id="about"></section>
+      <section class="section sec3 portfolio" id="portfolio"></section>
+      <section class="section sec4 blogs" id="blogs"></section>
+      <section class="section sec5 contact" id="contact"></section>
+    </main>
+
+    <div class="controls">
+      <div class="control control-1 active-btn" data-id="header">
+        <i class="fas fa-home"></i>
+      </div>
+
+      <div class="control control-2" data-id="about">
+        <i class="fas fa-user"></i>
+      </div>
+      <div class="control control-3" data-id="portfolio">
+        <i class="fas fa-briefcase"></i>
+      </div>
+      <div class="control control-4" data-id="blogs">
+        <i class="fas fa-newspaper"></i>
+      </div>
+      <div class="control control-5" data-id="contact">
+        <i class="fas fa-envelope-open"></i>
+      </div>
+    </div>
+    <!-- ############################ -->
+    <script src="./app.js"></script>
+    <!-- <script src="assets/StartUp/js/bootstrap.bundle.min.js"></script> -->
+  </body>
 </html>
