--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shiham-portfolio</title>
-    <link
-      rel="icon"
-      href="assets/img/279105393_3201597220099002_4487681873371122246_n.png"
-    />
+    <link rel="icon" href="/assets/img/shiham.png" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- <link rel="stylesheet" href="assets/StartUp/css/bootstrap.min.css" /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -25,7 +23,32 @@
     />
   </head>
   <body class="main-content">
-    <header class="section sec1 header active" id="header"></header>
+    <header class="section sec1 header active" id="header">
+      <div class="header-content">
+        <div class="left-header">
+          <div class="h-shape"></div>
+          <div class="image">
+            <img src="./assets/img/shiham.jpg" alt="" />
+          </div>
+        </div>
+
+        <div class="right-header">
+          <h1 class="name">Hi, I'm <span>Shiham</span> A web developer</h1>
+          <p>
+            I'm web developer. I love to create beautiful website. And I'm also
+            a converter. I convert Figma file to html, XD to html and many more
+          </p>
+          <div class="btn-container">
+            <a href="" class="main-btn">
+              <span class="btn-text">Download CV</span>
+              <span class="btn-icon">
+                <i class="fas fa-download"></i>
+              </span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
 
     <main>
       <section class="section sec2 about" id="about"></section>
@@ -38,7 +61,6 @@
       <div class="control control-1 active-btn" data-id="header">
         <i class="fas fa-home"></i>
       </div>
-
       <div class="control control-2" data-id="about">
         <i class="fas fa-user"></i>
       </div>
