--- a/index.html
+++ b/index.html
@@ -51,7 +51,157 @@
     </header>
 
     <main>
-      <section class="section sec2 about" id="about"></section>
+      <section class="section sec2 about" id="about">
+        <div class="main-title">
+          <h2>About <span>me</span> <span class="bg-text">My status</span></h2>
+        </div>
+
+        <div class="about-container">
+          <div class="left-about">
+            <h4>Information About me</h4>
+            <p>
+              I'm strongly experienced in HTML5, and CSS3 with CSS preprocessor
+              SASS, Also the latest bootstrap and Responsive Design, and also
+              have a good knowledge of Javascript. And we work on browser
+              compatibility.
+              <br />
+              <br />
+              I am also experienced with design conversion to HTML templates.
+              Like Figma to HTML, Xd to HTML, PSD to HTML, Ai to HTML, id to
+              html, Sketch to html, zepline to html, invision to html.
+              <br />
+              <br />
+              also, I work with WordPress elementor
+            </p>
+            <div class="btn-container">
+              <a href="" class="main-btn">
+                <span class="btn-text">Download CV</span>
+                <span class="btn-icon">
+                  <i class="fas fa-download"></i>
+                </span>
+              </a>
+            </div>
+          </div>
+          <div class="right-about">
+            <div class="about-item">
+              <div class="about-text">
+                <p class="large-text">560+</p>
+                <p class="small-text">
+                  Project <br />
+                  completed
+                </p>
+              </div>
+            </div>
+            <div class="about-item">
+              <div class="about-text">
+                <p class="large-text">10+</p>
+                <p class="small-text">
+                  years <br />
+                  experienced
+                </p>
+              </div>
+            </div>
+            <div class="about-item">
+              <div class="about-text">
+                <p class="large-text">300+</p>
+                <p class="small-text">
+                  happy <br />
+                  clients
+                </p>
+              </div>
+            </div>
+            <div class="about-item">
+              <div class="about-text">
+                <p class="large-text">10+</p>
+                <p class="small-text">
+                  customer<br />
+                  reviews
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- ---------------- -->
+
+        <div class="about-stats">
+          <div class="stat-title">My skill</div>
+
+          <div class="progress-bars">
+            <div class="progress-bar">
+              <p class="progress-title">HTML5</p>
+              <div class="progress-container">
+                <p class="progress-text">90%</p>
+                <div class="progress">
+                  <span class="html"></span>
+                </div>
+              </div>
+            </div>
+            <div class="progress-bar">
+              <p class="progress-title">css3</p>
+              <div class="progress-container">
+                <p class="progress-text">90%</p>
+                <div class="progress">
+                  <span class="css"></span>
+                </div>
+              </div>
+            </div>
+            <div class="progress-bar">
+              <p class="progress-title">Bootstrap</p>
+              <div class="progress-container">
+                <p class="progress-text">70%</p>
+                <div class="progress">
+                  <span class="bootstrap"></span>
+                </div>
+              </div>
+            </div>
+            <div class="progress-bar">
+              <p class="progress-title">javaScript</p>
+              <div class="progress-container">
+                <p class="progress-text">10%</p>
+                <div class="progress">
+                  <span class="js"></span>
+                </div>
+              </div>
+            </div>
+            <div class="progress-bar">
+              <p class="progress-title">sass</p>
+              <div class="progress-container">
+                <p class="progress-text">90%</p>
+                <div class="progress">
+                  <span class="sass"></span>
+                </div>
+              </div>
+            </div>
+            <div class="progress-bar">
+              <p class="progress-title">git</p>
+              <div class="progress-container">
+                <p class="progress-text">90%</p>
+                <div class="progress">
+                  <span class="git"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- ---------------- -->
+
+        <div class="stat-title">My timeline</div>
+        <div class="timeline">
+          <div class="timeline-item">
+            <div class="timeline-icon">
+              <i class="fas fa-briefcase"></i>
+            </div>
+            <p class="timeline-duration">2010 - Present</p>
+            <h5>Web developer <span> - Microsoft</span></h5>
+            <p>
+              I do web deep development section at microsoft we will be wait
+            </p>
+          </div>
+        </div>
+      </section>
+
       <section class="section sec3 portfolio" id="portfolio"></section>
       <section class="section sec4 blogs" id="blogs"></section>
       <section class="section sec5 contact" id="contact"></section>
