--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
       </div>
     </header>
 
+    <!-- ============================================= -->
+
     <main>
       <section class="section sec2 about" id="about">
         <div class="main-title">
@@ -199,10 +201,238 @@
               I do web deep development section at microsoft we will be wait
             </p>
           </div>
+          <div class="timeline-item">
+            <div class="timeline-icon">
+              <i class="fas fa-briefcase"></i>
+            </div>
+            <p class="timeline-duration">2010 - Present</p>
+            <h5>Web developer <span> - Microsoft</span></h5>
+            <p>
+              I do web deep development section at microsoft we will be wait
+            </p>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-icon">
+              <i class="fas fa-briefcase"></i>
+            </div>
+            <p class="timeline-duration">2010 - Present</p>
+            <h5>Web developer <span> - Microsoft</span></h5>
+            <p>
+              I do web deep development section at microsoft we will be wait
+            </p>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-icon">
+              <i class="fas fa-briefcase"></i>
+            </div>
+            <p class="timeline-duration">2010 - Present</p>
+            <h5>Web developer <span> - Microsoft</span></h5>
+            <p>
+              I do web deep development section at microsoft we will be wait
+            </p>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-icon">
+              <i class="fas fa-briefcase"></i>
+            </div>
+            <p class="timeline-duration">2010 - Present</p>
+            <h5>Web developer <span> - Microsoft</span></h5>
+            <p>
+              I do web deep development section at microsoft we will be wait
+            </p>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-icon">
+              <i class="fas fa-briefcase"></i>
+            </div>
+            <p class="timeline-duration">2010 - Present</p>
+            <h5>Web developer <span> - Microsoft</span></h5>
+            <p>
+              I do web deep development section at microsoft we will be wait
+            </p>
+          </div>
         </div>
       </section>
 
-      <section class="section sec3 portfolio" id="portfolio"></section>
+      <!-- ===================================== -->
+
+      <section class="section sec3 portfolio" id="portfolio">
+        <div class="main-title">
+          <h2>
+            My <span>Portfolio</span> <span class="bg-text">My Work</span>
+          </h2>
+        </div>
+        <p class="portfolio-text">
+          Here are some of my work that I've in various programming language
+        </p>
+
+        <!-- ----------------------- -->
+
+        <div class="portfolios">
+          <!-- ----------------------- -->
+
+          <div class="portfolio-item">
+            <div class="image">
+              <img src="./assets/img/port1.jpg" alt="" />
+            </div>
+
+            <div class="hover-items">
+              <h3>Project source</h3>
+              <div class="icons">
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-facebook"></i>
+                </a>
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-youtube"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- ----------------------- -->
+
+          <div class="portfolio-item">
+            <div class="image">
+              <img src="./assets/img/port2.jpg" alt="" />
+            </div>
+
+            <div class="hover-items">
+              <h3>Project source</h3>
+              <div class="icons">
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-facebook"></i>
+                </a>
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-youtube"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- ----------------------- -->
+
+          <div class="portfolio-item">
+            <div class="image">
+              <img src="./assets/img/port3.jpg" alt="" />
+            </div>
+
+            <div class="hover-items">
+              <h3>Project source</h3>
+              <div class="icons">
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-facebook"></i>
+                </a>
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-youtube"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- ----------------------- -->
+
+          <div class="portfolio-item">
+            <div class="image">
+              <img src="./assets/img/port4.jpg" alt="" />
+            </div>
+
+            <div class="hover-items">
+              <h3>Project source</h3>
+              <div class="icons">
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-facebook"></i>
+                </a>
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-youtube"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- ----------------------- -->
+
+          <div class="portfolio-item">
+            <div class="image">
+              <img src="./assets/img/port5.jpg" alt="" />
+            </div>
+
+            <div class="hover-items">
+              <h3>Project source</h3>
+              <div class="icons">
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-facebook"></i>
+                </a>
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-youtube"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- ----------------------- -->
+
+          <div class="portfolio-item">
+            <div class="image">
+              <img src="./assets/img/port6.jpg" alt="" />
+            </div>
+
+            <div class="hover-items">
+              <h3>Project source</h3>
+              <div class="icons">
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-facebook"></i>
+                </a>
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-youtube"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- ----------------------- -->
+
+          <div class="portfolio-item">
+            <div class="image">
+              <img src="./assets/img/port7.jpg" alt="" />
+            </div>
+
+            <div class="hover-items">
+              <h3>Project source</h3>
+              <div class="icons">
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-facebook"></i>
+                </a>
+                <a href="#" target="_blank" class="icon">
+                  <i class="fab fa-youtube"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- =========================================== -->
       <section class="section sec4 blogs" id="blogs"></section>
       <section class="section sec5 contact" id="contact"></section>
     </main>
