--- a/index.html
+++ b/index.html
@@ -433,10 +433,187 @@
       </section>
 
       <!-- =========================================== -->
-      <section class="section sec4 blogs" id="blogs"></section>
-      <section class="section sec5 contact" id="contact"></section>
+      <section class="section sec4 blogs" id="blogs">
+        <div class="blogs-content">
+          <div class="main-title">
+            <h2>My <span>Blogs</span> <span class="bg-text">My Blogs</span></h2>
+          </div>
+          <div class="blogs-item">
+            <!-- --------------------- -->
+
+            <div class="blog">
+              <img src="./assets/img/blog1.jpg" alt="" />
+
+              <div class="blog-text">
+                <h4>how to create a website</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Vitae, ducimus. Lorem, ipsum dolor sit amet consectetur
+                  adipisicing elit. Eos, fugiat?
+                </p>
+              </div>
+            </div>
+
+            <!-- -------------------- -->
+            <div class="blog">
+              <img src="./assets/img/blog2.jpg" alt="" />
+
+              <div class="blog-text">
+                <h4>how to create a website</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Vitae, ducimus. Lorem, ipsum dolor sit amet consectetur
+                  adipisicing elit. Eos, fugiat?
+                </p>
+              </div>
+            </div>
+
+            <!-- ------------------- -->
+            <div class="blog">
+              <img src="./assets/img/blog3.jpg" alt="" />
+
+              <div class="blog-text">
+                <h4>how to create a website</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Vitae, ducimus. Lorem, ipsum dolor sit amet consectetur
+                  adipisicing elit. Eos, fugiat?
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- =========================================== -->
+
+      <section class="section sec5 contact" id="contact">
+        <div class="contact-container">
+          <div class="main-title">
+            <h2>
+              contact <span>me</span>
+              <span class="bg-text">Available</span>
+            </h2>
+          </div>
+
+          <div class="contact-content">
+            <div class="left-contact">
+              <h4>Contact me here</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                ex minima aperiam dolore quidem, quia nobis consequuntur vero
+                amet ut!
+              </p>
+              <div class="contact-info">
+                <div class="contact-item">
+                  <div class="icon">
+                    <i class="fas fa-map-marked-alt"></i>
+                    Location
+                  </div>
+                  <p>: Sherpur, Bangladesh</p>
+                </div>
+
+                <!-- ------------------ -->
+                <div class="contact-item">
+                  <div class="icon">
+                    <i class="fas fa-envelope"></i>
+                    Email
+                  </div>
+                  <p>s36651786@gmail.com</p>
+                </div>
+
+                <!-- ------------------ -->
+
+                <div class="contact-item">
+                  <div class="icon">
+                    <i class="fas fa-phone-alt"></i>
+                    Phone
+                  </div>
+                  <p>+8801765380015</p>
+                </div>
+
+                <!-- ------------------ -->
+
+                <div class="contact-item">
+                  <div class="icon">
+                    <i class="fas fa-user-graduate"></i>
+                    Education
+                  </div>
+                  <p>N M High School, BK</p>
+                </div>
+
+                <!-- ------------------ -->
+
+                <div class="contact-item">
+                  <div class="icon">
+                    <i class="fas fa-globe-africa"></i>
+                    Language
+                  </div>
+                  <p>English, Bangla</p>
+                </div>
+
+                <!-- ------------------ -->
+              </div>
+              <div class="contact-icons">
+                <div class="contact-icon">
+                  <a href="#" target="_blank">
+                    <i class="fab fa-facebook"></i>
+                  </a>
+                  <a href="#" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                  </a>
+                  <a href="#" target="_blank">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                  <a href="#" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                  </a>
+                  <a href="#" target="_blank">
+                    <i class="fab fa-github"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <!-- ----------- -->
+            <div class="right-contact">
+              <form action="" class="contact-form">
+                <div class="input-control input-control-custom">
+                  <input type="text" placeholder="YOUR NAME" required />
+                  <input type="email" placeholder="YOUR EMAIL" required />
+                </div>
+
+                <div class="input-control">
+                  <input type="text" placeholder="ENTER SUBJECT" required />
+                </div>
+
+                <div class="input-control">
+                  <textarea
+                    name=""
+                    id=""
+                    cols="15"
+                    rows="7"
+                    placeholder="MESSAGE HERE..."
+                  ></textarea>
+                </div>
+                <div class="submit-btn">
+                  <div class="btn-container">
+                    <a href="" class="main-btn">
+                      <span class="btn-text">Submit Here</span>
+                      <span class="btn-icon">
+                        <i class="fas fa-download"></i>
+                      </span>
+                    </a>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
+    <!-- ########################################## -->
     <div class="controls">
       <div class="control control-1 active-btn" data-id="header">
         <i class="fas fa-home"></i>
