mobile screen responsive

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
               </a>
             </div>
           </div>
+
           <div class="right-about">
             <div class="about-item">
               <div class="about-text">
@@ -266,11 +267,7 @@
           Here are some of my work that I've in various programming language
         </p>
 
-        <!-- ----------------------- -->
-
         <div class="portfolios">
-          <!-- ----------------------- -->
-
           <div class="portfolio-item">
             <div class="image">
               <img src="./assets/img/port1.jpg" alt="" />
@@ -438,9 +435,9 @@
           <div class="main-title">
             <h2>My <span>Blogs</span> <span class="bg-text">My Blogs</span></h2>
           </div>
-          <div class="blogs-item">
-            <!-- --------------------- -->
 
+          <!-- ------------------- -->
+          <div class="blogs-item">
             <div class="blog">
               <img src="./assets/img/blog1.jpg" alt="" />
 
@@ -485,6 +482,8 @@
         </div>
       </section>
 
+      <!-- =========================================== -->
+      <!-- =========================================== -->
       <!-- =========================================== -->
 
       <section class="section sec5 contact" id="contact">
@@ -632,6 +631,10 @@
       </div>
     </div>
     <!-- ############################ -->
+
+    <div class="theme-btn">
+      <i class="fas fa-adjust"></i>
+    </div>
     <script src="./app.js"></script>
     <!-- <script src="assets/StartUp/js/bootstrap.bundle.min.js"></script> -->
   </body>
