--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
       </section>
 
       <!-- ===================================== -->
+      <!-- ===================================== -->
+      <!-- ===================================== -->
 
       <section class="section sec3 portfolio" id="portfolio">
         <div class="main-title">
@@ -576,7 +578,11 @@
 
             <!-- ----------- -->
             <div class="right-contact">
-              <form action="" class="contact-form">
+              <form
+                action="s36651786@gmail.com"
+                method="POST"
+                class="contact-form"
+              >
                 <div class="input-control input-control-custom">
                   <input type="text" placeholder="YOUR NAME" required />
                   <input type="email" placeholder="YOUR EMAIL" required />
